salesforce/main/default/objects/Activity/fields/Concerns_Objections__c.field-meta.xml
<CustomField>
    <fullName>Concerns_Objections__c</fullName>
    <label>Concerns / Objections</label>
    <type>Text</type>
    <length>255</length>
    <description>Important customer concerns, objections, blockers, budget concerns, competitor mentions, or internal approval issues raised during this meeting. Defined on the shared Activity entity but only intended for use on Event. Text(255) - LongTextArea is not a supported type on the shared Activity entity in this org.</description>
</CustomField>