salesforce/main/default/objects/Activity/fields/Customer_Reaction__c.field-meta.xml
<CustomField>
    <fullName>Customer_Reaction__c</fullName>
    <label>Customer Reaction</label>
    <type>Picklist</type>
    <description>The salesperson's read on how the customer reacted during this meeting. Defined on the shared Activity entity but only intended for use on Event.</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Very Positive</fullName>
            </value>
            <value>
                <fullName>Positive</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Negative</fullName>
            </value>
            <value>
                <fullName>Very Negative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>