salesforce/main/default/objects/Activity/fields/Key_Decision__c.field-meta.xml
<CustomField>
    <fullName>Key_Decision__c</fullName>
    <label>Key Decision</label>
    <type>Text</type>
    <length>255</length>
    <description>What was agreed or decided during this meeting? Defined on the shared Activity entity but only intended for use on Event. Text(255) - LongTextArea is not a supported type on the shared Activity entity in this org.</description>
</CustomField>