salesforce/main/default/objects/Activity/fields/Key_Discussion__c.field-meta.xml
<CustomField>
    <fullName>Key_Discussion__c</fullName>
    <label>Key Discussion</label>
    <type>Text</type>
    <length>255</length>
    <description>What were the main topics discussed during this meeting? Defined on the shared Activity entity but only intended for use on Event. Text(255) - LongTextArea is not a supported type on the shared Activity entity in this org.</description>
</CustomField>